--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:watch": "webpack-dev-server --config webpack.config.js",
     "start": "http-server ./dist -p 8080"
   },
-  "author": "",
+  "author": "Tamas Szabo",
   "license": "ISC",
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.3",
