--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.10.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
     "typescript": "^2.3.4",
     "webpack": "^3.0.0",
