--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "build:watch": "webpack-dev-server --config webpack.config.js",
-    "start": "http-server ./dist -p 8080"
+    "prebuild": "rimraf ./dist",
+    "build": "webpack",
+    "prebuild:watch": "rimraf ./dist",
+    "build:watch": "webpack-dev-server",
+    "start": "http-server ./ -p 8080"
   },
   "author": "Tamas Szabo",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.10.0",
     "node-sass": "^4.5.3",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
     "typescript": "^2.3.4",
