--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "build": "webpack",
     "prebuild:watch": "rimraf ./dist",
     "build:watch": "webpack-dev-server",
-    "start": "http-server ./ -p 8080"
+    "start": "http-server ./ -p 8080",
+    "test": "karma start"
   },
   "author": "Tamas Szabo",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.0.1",
+    "@types/mocha": "^2.2.41",
     "awesome-typescript-loader": "^3.1.3",
+    "chai": "^4.0.2",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.10.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
