--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "karma-webpack": "^2.0.3",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
