--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.0.1",
+    "@types/enzyme": "^2.8.1",
     "@types/mocha": "^2.2.41",
     "awesome-typescript-loader": "^3.1.3",
     "chai": "^4.0.2",
@@ -40,6 +41,7 @@
   "dependencies": {
     "@types/react": "^15.0.31",
     "@types/react-dom": "^15.5.1",
+    "enzyme": "^2.9.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
