--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^15.5.1",
     "enzyme": "^2.9.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1"
   }
 }
