--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/chai": "^4.0.1",
     "@types/enzyme": "^2.8.1",
     "@types/mocha": "^2.2.41",
+    "@types/uuid": "^3.0.0",
     "awesome-typescript-loader": "^3.1.3",
     "chai": "^4.0.2",
     "css-loader": "^0.28.4",
@@ -37,6 +38,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
     "typescript": "^2.3.4",
+    "uuid": "^3.1.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
