--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.0.1",
+    "@types/chai-spies": "^0.0.0",
     "@types/enzyme": "^2.8.1",
     "@types/mocha": "^2.2.41",
     "@types/uuid": "^3.0.0",
     "awesome-typescript-loader": "^3.1.3",
     "chai": "^4.0.2",
+    "chai-spies": "^0.7.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
