--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "prebuild": "npm run clean",
-    "build": "webpack -s",
+    "build": "webpack",
     "prebuild:watch": "npm run clean",
     "build:watch": "webpack-dev-server --open",
     "start": "http-server ./ -p 8080",
@@ -22,7 +22,7 @@
     "@types/uuid": "^3.0.0",
     "awesome-typescript-loader": "^3.1.3",
     "chai": "^4.0.2",
-    "chai-spies": "^0.7.1",
+    "chai-spies": "git://github.com/chaijs/chai-spies.git#b11aeebf",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
